working player selection

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="col-lg-2">
-        <center><button type="button" class="btn btn-lg btn-danger" disabled>Attack!</button></center>
+        <center><button type="button" class="btn btn-lg btn-danger hidden">Attack!</button></center>
       </div>
 
       <div class="col-lg-5">
